--- a/index.html
+++ b/index.html
@@ -272,11 +272,11 @@
         desc_uk:'<strong>Неонуарний детективний бойовик від авторів Yakuza.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>Neo-noir detective action from the creators of Yakuza.</strong> Full Ukrainian translation: side cases, tutorials, UI, and more.',
         cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://t.me/LittleBitUA/97',animated:true}},
-      { id:'lost-judgment', title:'Lost Judgment', cover:'assets/lost_judgment.webp', logo:'assets/lost_judgment_logo.png', status:'fundraising', progress:0, raised:15650, goal:25000,
+      { id:'lost-judgment', title:'Lost Judgment', cover:'assets/lost_judgment.webp', logo:'assets/lost_judgment_logo.png', status:'fundraising', progress:0, raised:13650, goal:25000,
         desc_uk:'<strong>Продовження неонуарної історії про детектива Яґамі.</strong> Йде добровільний збір на локалізацію гри.',
         desc_en:'<strong>The neo-noir story of detective Yagami continues.</strong> We\'re raising funds for the localization.',
         cta:{type:'link',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
-      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin.png', status:'fundraising', progress:0, raised:15650, goal:25000,
+      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin.png', status:'fundraising', progress:0, raised:13650, goal:25000,
         desc_uk:'<strong>Наточіть свій меч та приєднуйтесь до революції у цій історичній пригоді.</strong> Йде добровільний збір на локалізацію гри.',
         desc_en:'<strong>Sharpen your blade and join the revolution in this historical adventure.</strong> We\'re raising funds for the localization.',
         cta:{type:'link',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
@@ -303,7 +303,11 @@
       { id:'nmh3', title:'No More Heroes 3', cover:'assets/no_more_heroes_3.webp', logo:'assets/no_more_heroes3_logo.png', status:'early-access', progress:100,
         desc_uk:'<strong>Надери дупу прибульцям!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.',
         desc_en:'<strong>Kick some alien butt!</strong> Full Ukrainian translation: story, tutorials, UI, and more.',
-        cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://t.me/LittleBitUA/95',animated:true}},
+        cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://t.me/LittleBitUA/95',animated:true}},      { id:'dp2', title:'Deadly Premonition 2: A Blessing in Disguise', cover:'assets/DP2.webp', logo:'assets/DP2_Logo.webp', status:'in-progress', progress:3,
+        desc_uk:'<strong>Сиквел культового трилера з дивакуватим шармом.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.',
+        desc_en:'<strong>Sequel to the cult, quirky thriller.</strong> Full Ukrainian translation in progress: story, UI, subtitles.',
+        cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
+
     ];
 
     const I18N = {
