--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
     }
     @keyframes lb-sweep{ 0%{ left:-160% } 55%{ left:120% } 100%{ left:120% } }
     @media (prefers-reduced-motion: reduce){ .btn.download-anim{ animation:none } .btn.download-anim::after{ animation:none } }
-  </style>
+  
+#benefactors .chip { cursor: default; }
+</style>
 </head>
 <body>
   <div class="bg">
@@ -164,6 +166,7 @@
       <a href="#projects" data-i18n="nav_projects">Наші проєкти</a>
       <a href="#contacts" data-i18n="nav_contacts">Контакти</a>
       <a href="#support" data-i18n="nav_support">Фінансова підтримка</a>
+      <a href="#benefactors" data-i18n="nav_benefactors">Доброчинці</a>
       <div class="lang" id="langSwitchDrawer" aria-label="Language switcher">
         <button type="button" class="lang-btn" data-lang="uk" aria-label="Українська"><span class="flag">🇺🇦</span><span>UA</span></button>
         <button type="button" class="lang-btn" data-lang="en" aria-label="English"><span class="flag">🇬🇧</span><span>EN</span></button>
@@ -179,6 +182,8 @@
         <a href="#projects" data-i18n="nav_projects">Наші проєкти</a>
         <a href="#contacts" data-i18n="nav_contacts">Контакти</a>
         <a href="#support" data-i18n="nav_support">Фінансова підтримка</a>
+      
+        <a href="#benefactors" data-i18n="nav_benefactors">Доброчинці</a>
       </div>
       <div class="lang" id="langSwitch" aria-label="Language switcher">
         <button type="button" class="lang-btn" data-lang="uk" aria-label="Українська"><span class="flag">🇺🇦</span><span>UA</span></button>
@@ -264,6 +269,37 @@
         </div>
       </div>
     </section>
+  
+    <section id="benefactors" class="container" style="scroll-margin-top:80px">
+      <div class="glass" style="padding:20px">
+        <h2 style="margin-top:0" data-i18n="benefactors_title">Доброчинці</h2>
+        <p style="color:var(--muted)" data-i18n="benefactors_desc">Це — список усіх людей, які коли-небудь підтримали діяльність нашої спілки, ми щиро їм вдячні:</p>
+        <div class="chips" aria-label="Список доброчинців">
+          <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#fbbf24;background:rgba(251,191,36,.15)">👑 <strong>vadkointel</strong></span>
+          <span aria-disabled="true" tabindex="-1" class="chip">BreadHood</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">grafdralkuma</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Мимокрокодил</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Volodymyr</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">anonymous</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Дмитро</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Македонський</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Рома</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Jobitronik</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">AlviSeed</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">HorseBH</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Владислав</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Nodertuk</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Артур К</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Валто</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Uatarasas</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Костянтин</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">SPOQ</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Віталій</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">Хоук</span>
+        </div>
+      </div>
+    </section>
+
   </main>
   <script>
     // --- Data ---
@@ -272,11 +308,11 @@
         desc_uk:'<strong>Неонуарний детективний бойовик від авторів Yakuza.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>Neo-noir detective action from the creators of Yakuza.</strong> Full Ukrainian translation: side cases, tutorials, UI, and more.',
         cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://t.me/LittleBitUA/97',animated:true}},
-      { id:'lost-judgment', title:'Lost Judgment', cover:'assets/lost_judgment.webp', logo:'assets/lost_judgment_logo.png', status:'fundraising', progress:0, raised:13650, goal:25000,
+      { id:'lost-judgment', title:'Lost Judgment', cover:'assets/lost_judgment.webp', logo:'assets/lost_judgment_logo.png', status:'fundraising', progress:0, raised:20000, goal:25000,
         desc_uk:'<strong>Продовження неонуарної історії про детектива Яґамі.</strong> Йде добровільний збір на локалізацію гри.',
         desc_en:'<strong>The neo-noir story of detective Yagami continues.</strong> We\'re raising funds for the localization.',
         cta:{type:'link',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
-      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin.png', status:'fundraising', progress:0, raised:13650, goal:25000,
+      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin.png', status:'fundraising', progress:0, raised:20000, goal:25000,
         desc_uk:'<strong>Наточіть свій меч та приєднуйтесь до революції у цій історичній пригоді.</strong> Йде добровільний збір на локалізацію гри.',
         desc_en:'<strong>Sharpen your blade and join the revolution in this historical adventure.</strong> We\'re raising funds for the localization.',
         cta:{type:'link',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
@@ -525,5 +561,31 @@ const chip=e.target.closest('.chip'); if (chip){ document.querySelectorAll('.chi
 
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+
+  <footer>
+    © <span id="year"></span> «Little Bit». Усі права захищено.
+  </footer>
+
+
+<script>
+(function(){
+  var scope = document.getElementById('benefactors');
+  if(!scope) return;
+  // Make sure chips can't be tab-focused (redundant safety)
+  scope.querySelectorAll('.chip').forEach(function(el){
+    el.setAttribute('aria-disabled','true');
+    el.setAttribute('tabindex','-1');
+  });
+  // Stop clicks on benefactor chips from triggering any global handlers
+  scope.addEventListener('click', function(e){
+    if (e.target && e.target.closest('.chip')) {
+      e.preventDefault();
+      e.stopPropagation();
+      return false;
+    }
+  }, true);
+})();
+</script>
+
 </body>
 </html>
