--- a/index.html
+++ b/index.html
@@ -91,16 +91,7 @@
     .swatches button[data-accent="amber"]{ background: linear-gradient(135deg, #f59e0b, #22d3ee) }
     h2{font-size: clamp(22px, 3vw, 32px); margin:0 0 18px}
     .grid{ display:grid; grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); gap:14px; align-items:stretch; }
-    .card{
-  overflow:hidden;
-  position:relative;
-  display:flex;
-  flex-direction:column;
-  /* було: contain: paint; */
-  contain: content;
-  content-visibility: auto;
-  contain-intrinsic-size: 420px;
-}
+    .card{ overflow:hidden; position:relative; display:flex; flex-direction:column; contain: paint; }
     .thumb{ position:relative; aspect-ratio: 16/9; background:#0f172a; overflow:hidden }
     .thumb img{ width:100%; height:100%; object-fit:cover; opacity:.92; transform: scale(1.02); transition:transform .5s ease }
     @media (hover:hover) and (pointer:fine){ .card:hover .thumb img{ transform: scale(1.07) } }
@@ -155,6 +146,33 @@
   
 #benefactors .chip { cursor: default; }
 </style>
+
+<style id="perf-card-override">
+/* PERF override: do not change visuals, just isolate layout & skip offscreen paint */
+:where(.card){
+  contain: content;
+  content-visibility: auto;
+  contain-intrinsic-size: 420px;
+}
+</style>
+
+
+<style id="perf-anim-patch">
+@media (prefers-reduced-motion: no-preference){
+  [data-anim]{ animation-play-state: paused !important; }
+  [data-anim].is-visible{ animation-play-state: running !important; }
+}
+@media (prefers-reduced-motion: reduce){
+  *{
+    animation-duration: 1ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0ms !important;
+  }
+}
+html[data-tab-hidden="true"] [data-anim]{ animation-play-state: paused !important; }
+[data-anim].will-animate{ backface-visibility: hidden; transform: translateZ(0); }
+</style>
+
 </head>
 <body>
   <div class="bg">
@@ -456,35 +474,32 @@
       return status==='in-progress'? d.badge_in_progress : status==='fundraising'? d.badge_fundraising : status==='early-access'? d.badge_early_access : '';
     }
     function projectCard(p){
-  const lang=document.documentElement.lang||'uk';
-  const d=I18N[lang];
-  const desc= lang==='en'? p.desc_en : p.desc_uk;
-  const pct=clamp(Math.round(p.progress||0),0,100);
-  const fundraising = p.status==='fundraising' && (p.goal>0);
-  const raisedLabel = fundraising ? `${d.raised_prefix} ${formatUA(p.raised||0)}₴ \ ${formatUA(p.goal||0)}₴` : null;
-  const label = (p.cta?.label_uk && lang==='uk')? p.cta.label_uk : (p.cta?.label_en && lang==='en')? p.cta.label_en : (lang==='uk'? d.btn_download : 'Download');
-  const cls = ['btn']; if (p.cta?.primary) cls.push('primary'); if (p.cta?.animated) cls.push('download-anim'); if (p.cta?.type==='disabled') cls.push('disabled');
-  const href = p.cta?.url || '#';
-  const attrs = (p.cta?.type==='disabled') ? 'aria-disabled="true" tabindex="-1"' : 'target="_blank" rel="noopener"';
-
-  return `
-    <article class="card glass" data-status="${p.status}" data-title="${p.title}">
-      <div class="thumb">
-        <img data-role="cover" src="${p.cover}" alt="" aria-hidden="true"
-             loading="lazy" decoding="async" width="1280" height="720">
-        <img class="logo" data-role="logo" src="${p.logo}" alt="" aria-hidden="true"
-             loading="lazy" decoding="async" fetchpriority="low">
-        <span class="badge">${badgeText(p.status)}</span>
-      </div>
-      <div class="content">
-        <h3>${p.title}</h3>
-        <p>${desc}</p>
-        <div class="progress" title="${(lang==='en'?'Progress':'Готовність')} ${pct}%"><span style="width:${pct}%"></span></div>
-        ${fundraising ? `<small style="color:var(--muted)">${raisedLabel}</small>` : `<small style="color:var(--muted)">${(lang==='en'?'Progress:':'Готовність:')} <strong>${pct}%</strong></small>`}
-        <div class="cta"><a class="${cls.join(' ')}" href="${href}" ${attrs}>${label}</a></div>
-      </div>
-    </article>`;
-}
+      const lang=document.documentElement.lang||'uk';
+      const d=I18N[lang];
+      const desc= lang==='en'? p.desc_en : p.desc_uk;
+      const pct=clamp(Math.round(p.progress||0),0,100);
+      const fundraising = p.status==='fundraising' && (p.goal>0);
+      const raisedLabel = fundraising ? `${d.raised_prefix} ${formatUA(p.raised||0)}₴ \\ ${formatUA(p.goal||0)}₴` : null;
+      const label = (p.cta?.label_uk && lang==='uk')? p.cta.label_uk : (p.cta?.label_en && lang==='en')? p.cta.label_en : (lang==='uk'? d.btn_download : 'Download');
+      const cls = ['btn']; if (p.cta?.primary) cls.push('primary'); if (p.cta?.animated) cls.push('download-anim'); if (p.cta?.type==='disabled') cls.push('disabled');
+      const href = p.cta?.url || '#';
+      const attrs = (p.cta?.type==='disabled') ? 'aria-disabled="true" tabindex="-1"' : 'target="_blank" rel="noopener"';
+      return `
+        <article class="card glass" data-status="${p.status}" data-title="${p.title}">
+          <div class="thumb">
+            <img src="${p.cover}" loading="lazy" alt="" aria-hidden="true">
+            <img class="logo" src="${p.logo}" alt="" aria-hidden="true" loading="lazy">
+            <span class="badge">${badgeText(p.status)}</span>
+          </div>
+          <div class="content">
+            <h3>${p.title}</h3>
+            <p>${desc}</p>
+            <div class="progress" title="${(lang==='en'?'Progress':'Готовність')} ${pct}%"><span style="width:${pct}%"></span></div>
+            ${fundraising ? `<small style="color:var(--muted)">${raisedLabel}</small>` : `<small style="color:var(--muted)">${(lang==='en'?'Progress:':'Готовність:')} <strong>${pct}%</strong></small>`}
+            <div class="cta"><a class="${cls.join(' ')}" href="${href}" ${attrs}>${label}</a></div>
+          </div>
+        </article>`;
+    }
     function updateStats(list){
       const total=list.length;
       const avg=total? Math.round(list.reduce((a,p)=>a+(p.progress||0),0)/total):0;
@@ -495,56 +510,19 @@
       if (se) se.textContent=ea;
     }
     function renderProjects(list){
-  const grid=document.getElementById('projectsGrid'); if (!grid) return;
-  grid.innerHTML=list.map(projectCard).join('');
-
-  // 1) High priority for first 2 covers
-  const covers = grid.querySelectorAll('.thumb img[data-role="cover"]');
-  covers.forEach((img, i)=>{
-    if (i < 2){
-      img.setAttribute('fetchpriority','high');
-      img.setAttribute('loading','eager');
-    } else {
-      img.setAttribute('fetchpriority','low');
-    }
-  });
-
-  // 2) Animate progress bars only when visible
-  const bars = grid.querySelectorAll('.progress > span');
-  const animate = (el)=>{ const w=el.style.width||'0%'; el.style.width='0%'; requestAnimationFrame(()=>{ el.style.width=w; }); };
-  if ('IntersectionObserver' in window){
-    const io = new IntersectionObserver(entries=>{
-      entries.forEach(e=>{
-        if (e.isIntersecting){
-          animate(e.target);
-          io.unobserve(e.target);
-        }
+      const grid=document.getElementById('projectsGrid'); if (!grid) return;
+      grid.innerHTML=list.map(projectCard).join('');
+      requestAnimationFrame(()=>{
+        document.querySelectorAll('.progress > span').forEach(el=>{
+          const w=el.style.width||'0%'; el.style.width='0%'; requestAnimationFrame(()=>{ el.style.width=w; });
+        });
       });
-    }, {rootMargin: '120px 0px'});
-    bars.forEach(b=>io.observe(b));
-  } else {
-    requestAnimationFrame(()=>bars.forEach(animate));
-  }
-
-  updateStats(list);
-  const meta=document.getElementById('searchMeta');
-  const fn= I18N[document.documentElement.lang||'uk'].search_found;
-  if (meta) meta.textContent = (typeof fn==='function'? fn(list.length) : String(fn).replace('{n}', String(list.length)));
-  const nr=document.getElementById('noResults'); if (nr) nr.hidden = list.length!==0;
-
-  // 3) Prefetch remaining images when idle
-  const prefetchRest = ()=>{
-    Array.from(covers).slice(2).forEach(img=>{
-      const link=document.createElement('link');
-      link.rel='prefetch';
-      link.as='image';
-      link.href=img.currentSrc || img.src;
-      document.head.appendChild(link);
-    });
-  };
-  if ('requestIdleCallback' in window) requestIdleCallback(prefetchRest, {timeout: 2000});
-  else setTimeout(prefetchRest, 1200);
-}
+      updateStats(list);
+      const meta=document.getElementById('searchMeta');
+      const fn= I18N[document.documentElement.lang||'uk'].search_found;
+      if (meta) meta.textContent = (typeof fn==='function'? fn(list.length) : String(fn).replace('{n}', String(list.length)));
+      const nr=document.getElementById('noResults'); if (nr) nr.hidden = list.length!==0;
+    }
 
     // --- Filters + Search ---
     let CURRENT_FILTER='all';
@@ -636,12 +614,76 @@ const chip=e.target.closest('.chip'); if (chip){ document.querySelectorAll('.chi
 })();
 </script>
 
-<script>
+
+<script id="perf-defer-images">
+(function(){
+  function onReady(fn){ if (document.readyState!=='loading') fn(); else document.addEventListener('DOMContentLoaded', fn); }
+  onReady(function(){
+    var grid = document.getElementById('projectsGrid');
+    if (!grid) return;
+
+    // 1) Prioritize first two covers
+    var covers = grid.querySelectorAll('.thumb img');
+    for (var i=0;i<covers.length;i++){
+      var img = covers[i];
+      var role = img.getAttribute('data-role') || '';
+      if (role !== 'cover') continue;
+      img.setAttribute('decoding','async'); // safe even if set
+      img.setAttribute('loading', i<2 ? 'eager' : 'lazy');
+      if (i<2) img.setAttribute('fetchpriority','high'); else img.setAttribute('fetchpriority','low');
+      if (!img.getAttribute('width')){ img.setAttribute('width','1280'); img.setAttribute('height','720'); }
+    }
+
+    // 2) Animate progress bars only when visible
+    var bars = grid.querySelectorAll('.progress > span');
+    var animate = function(el){ var w=el.style.width||'0%'; el.style.width='0%'; requestAnimationFrame(function(){ el.style.width=w; }); };
+    if ('IntersectionObserver' in window){
+      var io = new IntersectionObserver(function(entries){
+        entries.forEach(function(e){ if (e.isIntersecting){ animate(e.target); io.unobserve(e.target); } });
+      }, {rootMargin:'120px 0px'});
+      bars.forEach ? bars.forEach(function(b){ io.observe(b); }) : Array.prototype.forEach.call(bars, function(b){ io.observe(b); });
+    } else {
+      requestAnimationFrame(function(){ Array.prototype.forEach.call(bars, animate); });
+    }
+  });
+})();
+</script>
+
+
+<script id="sw-reg">
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', function(){
-    navigator.serviceWorker.register('./sw.js').catch(()=>{});
+    navigator.serviceWorker.register('./sw.js').catch(function(){});
   });
 }
 </script>
+
+
+<script id="perf-anim-manager">
+(function(){
+  if (!('getComputedStyle' in window)) return;
+  function onReady(fn){ if (document.readyState!=='loading') fn(); else document.addEventListener('DOMContentLoaded', fn); }
+  onReady(function(){
+    var animated=[], all = document.querySelectorAll('body *');
+    for (var i=0;i<all.length;i++){
+      var el = all[i]; var cs = getComputedStyle(el);
+      if (cs.animationName && cs.animationName !== 'none'){ el.setAttribute('data-anim',''); animated.push(el); }
+    }
+    function onEnter(el){ el.classList.add('is-visible','will-animate'); requestAnimationFrame(function(){ el.classList.remove('will-animate'); }); }
+    function onExit(el){ el.classList.remove('is-visible'); }
+    if ('IntersectionObserver' in window){
+      var io = new IntersectionObserver(function(entries){
+        for (var j=0;j<entries.length;j++){ var e=entries[j]; if (e.isIntersecting) onEnter(e.target); else onExit(e.target); }
+      }, {rootMargin:'200px 0px', threshold:0.01});
+      animated.forEach ? animated.forEach(function(el){ io.observe(el); }) : Array.prototype.forEach.call(animated, function(el){ io.observe(el); });
+    } else { animated.forEach ? animated.forEach(onEnter) : Array.prototype.forEach.call(animated, onEnter); }
+  });
+  document.addEventListener('visibilitychange', function(){
+    if (document.hidden) document.documentElement.setAttribute('data-tab-hidden','true');
+    else document.documentElement.removeAttribute('data-tab-hidden');
+  });
+})();
+</script>
+
 </body>
 </html>
