--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ html[data-tab-hidden="true"] [data-anim]{ animation-play-state: paused !importan
         desc_uk:'<strong>Продовження неонуарної історії про детектива Яґамі.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.',
         desc_en:'<strong>The neo-noir story of detective Yagami continues.</strong> Full Ukrainian translation in progress: story, UI, subtitles.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin.png', status:'fundraising', progress:0, raised:20000, goal:25000,
+      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin.png', status:'fundraising', progress:0, raised:21000, goal:25000,
         desc_uk:'<strong>Наточіть свій меч та приєднуйтесь до революції у цій історичній пригоді.</strong> Йде добровільний збір на локалізацію гри.',
         desc_en:'<strong>Sharpen your blade and join the revolution in this historical adventure.</strong> We\'re raising funds for the localization.',
         cta:{type:'link',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
@@ -366,7 +366,8 @@ html[data-tab-hidden="true"] [data-anim]{ animation-play-state: paused !importan
       { id:'nmh3', title:'No More Heroes 3', cover:'assets/no_more_heroes_3.webp', logo:'assets/no_more_heroes3_logo.png', status:'early-access', progress:100,
         desc_uk:'<strong>Надери дупу прибульцям!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.',
         desc_en:'<strong>Kick some alien butt!</strong> Full Ukrainian translation: story, tutorials, UI, and more.',
-        cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://t.me/LittleBitUA/95',animated:true}},            { id:'dp1', title:"Deadly Premonition: The Director's Cut", cover:'assets/DP1.webp', logo:'assets/DP1_Logo.webp', status:'in-progress', progress:8,
+        cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://t.me/LittleBitUA/95',animated:true}},
+	{ id:'dp1', title:"Deadly Premonition: The Director's Cut", cover:'assets/DP1.webp', logo:'assets/DP1_Logo.webp', status:'in-progress', progress:15,
         desc_uk:'<strong>Культовий містичний трилер із дивакуватим шармом.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.',
         desc_en:'<strong>Cult mystery thriller with quirky charm.</strong> Full Ukrainian translation in progress: story, UI, subtitles.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
