--- a/index.html
+++ b/index.html
@@ -331,39 +331,39 @@ html[data-tab-hidden="true"] [data-anim]{ animation-play-state: paused !importan
   <script>
     // --- Data ---
     const PROJECTS = [
-      { id:'judgment', title:'Judgment', cover:'assets/judgment_takayuki.webp', logo:'assets/judgment_logo.png', status:'in-progress', progress:81,
+      { id:'judgment', title:'Judgment', cover:'assets/judgment_takayuki.webp', logo:'assets/judgment_logo.webp', status:'in-progress', progress:81,
         desc_uk:'<strong>Неонуарний детективний бойовик від авторів Yakuza.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>Neo-noir detective action from the creators of Yakuza.</strong> Full Ukrainian translation: side cases, tutorials, UI, and more.',
         cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://t.me/LittleBitUA/97',animated:true}},
-            { id:'lost-judgment', title:'Lost Judgment', cover:'assets/lost_judgment.webp', logo:'assets/lost_judgment_logo.png', status:'in-progress', progress:3,
+            { id:'lost-judgment', title:'Lost Judgment', cover:'assets/lost_judgment.webp', logo:'assets/lost_judgment_logo.webp', status:'in-progress', progress:3,
         desc_uk:'<strong>Продовження неонуарної історії про детектива Яґамі.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.',
         desc_en:'<strong>The neo-noir story of detective Yagami continues.</strong> Full Ukrainian translation in progress: story, UI, subtitles.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin.png', status:'fundraising', progress:0, raised:21000, goal:25000,
+      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin_Logo.webp', status:'fundraising', progress:0, raised:21000, goal:25000,
         desc_uk:'<strong>Наточіть свій меч та приєднуйтесь до революції у цій історичній пригоді.</strong> Йде добровільний збір на локалізацію гри.',
         desc_en:'<strong>Sharpen your blade and join the revolution in this historical adventure.</strong> We\'re raising funds for the localization.',
         cta:{type:'link',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
-      { id:'yk2', title:'Yakuza Kiwami 2', cover:'assets/yakuza_kiwami2.webp', logo:'assets/yakuza_kiwami2_logo.png', status:'in-progress', progress:47,
+      { id:'yk2', title:'Yakuza Kiwami 2', cover:'assets/yakuza_kiwami2.webp', logo:'assets/yakuza_kiwami2_logo.webp', status:'in-progress', progress:47,
         desc_uk:'<strong>Культовий ремейк на оновленому рушії.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>A cult remake on the upgraded engine.</strong> Full Ukrainian translation: substories, tutorials, UI, and more.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'y3', title:'Yakuza 3 Remastered', cover:'assets/yakuza_3_remastered.webp', logo:'assets/yakuza3_logo.png', status:'in-progress', progress:10,
+      { id:'y3', title:'Yakuza 3 Remastered', cover:'assets/yakuza_3_remastered.webp', logo:'assets/yakuza3_logo.webp', status:'in-progress', progress:10,
         desc_uk:'<strong>Той самий пляжний епізод.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>The iconic beach episode returns.</strong> Full Ukrainian translation: substories, tutorials, UI, and more.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'nmh1', title:'No More Heroes', cover:'assets/no_more_heroes_travis.webp', logo:'assets/no_more_heroes_logo.png', status:'in-progress', progress:86,
+      { id:'nmh1', title:'No More Heroes', cover:'assets/no_more_heroes_travis.webp', logo:'assets/no_more_heroes_logo.webp', status:'in-progress', progress:86,
         desc_uk:'<strong>Перша та неповторна пригода Тревіса Тачдауна.</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.',
         desc_en:'<strong>The first, unmatched adventure of Travis Touchdown.</strong> Full Ukrainian translation: story, tutorials, UI, and more.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'nmh2', title:'No More Heroes 2: Desperate Struggle', cover:'assets/no_more_heroes_2.webp', logo:'assets/no_more_heroes2_logo.png', status:'early-access', progress:100,
+      { id:'nmh2', title:'No More Heroes 2: Desperate Struggle', cover:'assets/no_more_heroes_2.webp', logo:'assets/no_more_heroes2_logo.webp', status:'early-access', progress:100,
         desc_uk:'<strong>Ще більше стилю та боїв!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.',
         desc_en:'<strong>Even more style and combat!</strong> Full Ukrainian translation: story, tutorials, UI, and more.',
         cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://t.me/LittleBitUA/95',animated:true}},
-      { id:'tsa', title:'Travis Strikes Again: No More Heroes', cover:'assets/travis_strikes_again.webp', logo:'assets/travis_strikes_again_logo.png', status:'in-progress', progress:23,
+      { id:'tsa', title:'Travis Strikes Again: No More Heroes', cover:'assets/travis_strikes_again.webp', logo:'assets/travis_strikes_again_logo.webp', status:'in-progress', progress:23,
         desc_uk:'<strong>Експериментальний спін-оф із метафікційними рівнями й мініжанрами.</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.',
         desc_en:'<strong>An experimental spin-off with metafictional levels and mini-genres.</strong> Full Ukrainian translation: story, tutorials, UI, and more.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'nmh3', title:'No More Heroes 3', cover:'assets/no_more_heroes_3.webp', logo:'assets/no_more_heroes3_logo.png', status:'early-access', progress:100,
+      { id:'nmh3', title:'No More Heroes 3', cover:'assets/no_more_heroes_3.webp', logo:'assets/no_more_heroes3_logo.webp', status:'early-access', progress:100,
         desc_uk:'<strong>Надери дупу прибульцям!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.',
         desc_en:'<strong>Kick some alien butt!</strong> Full Ukrainian translation: story, tutorials, UI, and more.',
         cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://t.me/LittleBitUA/95',animated:true}},
