--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@ document.addEventListener('DOMContentLoaded', () => {
           <span aria-disabled="true" tabindex="-1" class="chip">Артур К</span>
           <span aria-disabled="true" tabindex="-1" class="chip">Валто</span>
           <span aria-disabled="true" tabindex="-1" class="chip">Uatarasas</span>
+          <span aria-disabled="true" tabindex="-1" class="chip">smutok</span>
           <span aria-disabled="true" tabindex="-1" class="chip">Костянтин</span>
           <span aria-disabled="true" tabindex="-1" class="chip">SPOQ</span>
           <span aria-disabled="true" tabindex="-1" class="chip">Віталій</span>
