--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>«Little Bit» — українські локалізації ігор</title>
-  <meta name="description" content="«Little Bit» — українські локалізації відеоігор: Judgment, Yakuza, No More Heroes." />
+  <meta name="description" content="«Little Bit» — українські локалізації відеоігор: Judgment, Yakuza, No More Heroes, Deadly Premonition." />
   <meta name="theme-color" content="#0b1220"/>
   <link rel="icon" type="image/x-icon" href="logo.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -336,6 +336,7 @@ document.addEventListener('DOMContentLoaded', () => {
         <p style="color:var(--muted)" data-i18n="benefactors_desc">Це — список усіх людей, які коли-небудь підтримали діяльність нашої спілки, ми щиро їм вдячні:</p>
         <div class="chips" aria-label="Список доброчинців">
           <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#fbbf24;background:rgba(251,191,36,.15)">👑 <strong>vadkointel</strong></span>
+          <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#34d399;background:rgba(52,211,153,.15)">👑 <strong>Хоук</strong></span>
           <span aria-disabled="true" tabindex="-1" class="chip">BreadHood</span>
           <span aria-disabled="true" tabindex="-1" class="chip">grafdralkuma</span>
           <span aria-disabled="true" tabindex="-1" class="chip">Мимокрокодил</span>
@@ -356,7 +357,7 @@ document.addEventListener('DOMContentLoaded', () => {
           <span aria-disabled="true" tabindex="-1" class="chip">Костянтин</span>
           <span aria-disabled="true" tabindex="-1" class="chip">SPOQ</span>
           <span aria-disabled="true" tabindex="-1" class="chip">Віталій</span>
-          <span aria-disabled="true" tabindex="-1" class="chip">Хоук</span>
+          
         </div>
       </div>
     </section>
@@ -365,7 +366,7 @@ document.addEventListener('DOMContentLoaded', () => {
   <script>
     // --- Data ---
     const PROJECTS = [
-      { id:'judgment', title:'Judgment', cover:'assets/judgment_takayuki.webp', logo:'assets/judgment_logo.webp', status:'in-progress', progress:82,
+      { id:'judgment', title:'Judgment', cover:'assets/judgment_takayuki.webp', logo:'assets/judgment_logo.webp', status:'in-progress', progress:83,
         desc_uk:'<strong>Неонуарний детективний бойовик від авторів Yakuza.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>Neo-noir detective action from the creators of Yakuza.</strong> Full Ukrainian translation: side cases, tutorials, UI, and more.',
         cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://t.me/LittleBitUA/97',animated:true}},
