--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ document.addEventListener('DOMContentLoaded', () => {
         desc_uk:'<strong>Продовження неонуарної історії про детектива Яґамі.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.',
         desc_en:'<strong>The neo-noir story of detective Yagami continues.</strong> Full Ukrainian translation in progress: story, UI, subtitles.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin_Logo.webp', status:'fundraising', progress:0, raised:21350, goal:25000,
+      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin_Logo.webp', status:'in-progress', progress:1,
         desc_uk:'<strong>Наточіть свій меч та приєднуйтесь до революції у цій історичній пригоді.</strong> Йде добровільний збір на локалізацію гри.',
         desc_en:'<strong>Sharpen your blade and join the revolution in this historical adventure.</strong> We\'re raising funds for the localization.',
         cta:{type:'link',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
