--- a/index.html
+++ b/index.html
@@ -374,10 +374,10 @@ document.addEventListener('DOMContentLoaded', () => {
         desc_uk:'<strong>Продовження неонуарної історії про детектива Яґамі.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.',
         desc_en:'<strong>The neo-noir story of detective Yagami continues.</strong> Full Ukrainian translation in progress: story, UI, subtitles.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin_Logo.webp', status:'in-progress', progress:1,
-        desc_uk:'<strong>Наточіть свій меч та приєднуйтесь до революції у цій історичній пригоді.</strong> Йде добровільний збір на локалізацію гри.',
-        desc_en:'<strong>Sharpen your blade and join the revolution in this historical adventure.</strong> We\'re raising funds for the localization.',
-        cta:{type:'link',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
+      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin_Logo.webp', status:'in-progress', progress:5,
+        desc_uk:'<strong>Наточіть свій меч та приєднуйтесь до революції у цій історичній пригоді.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.',
+        desc_en:'<strong>Sharpen your blade and join the revolution in this historical adventure.</strong> Full Ukrainian translation in progress: story, UI, subtitles.',
+        cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
       { id:'yk2', title:'Yakuza Kiwami 2', cover:'assets/yakuza_kiwami2.webp', logo:'assets/yakuza_kiwami2_logo.webp', status:'in-progress', progress:47,
         desc_uk:'<strong>Культовий ремейк на оновленому рушії.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>A cult remake on the upgraded engine.</strong> Full Ukrainian translation: substories, tutorials, UI, and more.',
@@ -423,7 +423,7 @@ document.addEventListener('DOMContentLoaded', () => {
         li2:'Підтримка та інтеграція шрифтів, технічний супровід', li3:'Художня адаптація з дотриманням чинного українського правопису',
         projects_title:'Наші проєкти', badge_in_progress:'У процесі локалізації', badge_fundraising:'Збір на локалізацію', badge_early_access:'Ранній доступ',
         btn_download:'Завантажити', btn_sponsor:'Спонсорувати', btn_view_projects:'До проєктів', btn_support:'Підтримати',
-        status_fundraising:'Статус: <strong>збір коштів</strong>', raised_prefix:'Зібрано:', search_label:'Пошук проєкту', search_placeholder:'Пошук проєкту…',
+        status_fundraising:'Статус: <strong>збір коштів</strong>', raised_prefix:'Зібрано:', search_label:'Пошук проєкту', search_placeholder:'Пошук проєкту...',
         no_results:'Нічого не знайдено за цим запитом.', search_found:(n)=>`Знайдено: ${n}`, filter_all:'Усе', filter_in:'У процесі', filter_fund:'Збір коштів', filter_ea:'Ранній доступ',
         stat_projects:'проєктів у переліку', stat_avg:'середня готовність', stat_early:'ранній доступ', accent_label:'Стиль:', rights:'Усі права захищено.' },
       en:{ title:'“Little Bit” — Ukrainian Game Localizations', meta_desc:'“Little Bit” — Ukrainian localizations of video games: Judgment, Yakuza, No More Heroes.',
