--- a/index.html
+++ b/index.html
@@ -357,6 +357,9 @@ document.addEventListener('DOMContentLoaded', () => {
           <span aria-disabled="true" tabindex="-1" class="chip">Костянтин</span>
           <span aria-disabled="true" tabindex="-1" class="chip">SPOQ</span>
           <span aria-disabled="true" tabindex="-1" class="chip">Віталій</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Fan</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Сатаносексуалка</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">UnknownTheHero</span>
           
         </div>
       </div>
