--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ document.addEventListener('DOMContentLoaded', () => {
     // --- Data ---
     const PROJECTS = [
 
-      { id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', progress:0, goal:10000, raised:417,
+      { id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', progress:0, goal:10000, raised:617,
         desc_uk:'<strong>Легендарні бійці та стенди в арені мрії.</strong> Відкриваємо збір на повну українську локалізацію: інтерфейс, субтитри, туторіали.',
         desc_en:'<strong>Legendary fighters and Stands in a dream arena.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
@@ -422,7 +422,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
     const I18N = {
       uk:{ title:'«Little Bit» — українські локалізації ігор',
-        meta_desc:'«Little Bit» — українські локалізації відеоігор: Judgment, Yakuza, No More Heroes.',
+        meta_desc:'«Little Bit» — українські локалізації відеоігор: Judgment, Yakuza, No More Heroes, Deadly Premonition.',
         nav_projects:'Наші проєкти', nav_contacts:'Контакти', nav_support:'Фінансова підтримка',
         drawer_title:'Меню', drawer_label:'Мобільне меню', open_menu:'Відкрити меню', close_menu:'Закрити меню',
         pill_subtitle:'UA Localizations', hero_title2:'Грайте українською — відчувайте по-новому.', hero_lead:'Улюблені історії — українською, від серця.',
