--- a/index.html
+++ b/index.html
@@ -360,6 +360,10 @@ document.addEventListener('DOMContentLoaded', () => {
 		  <span aria-disabled="true" tabindex="-1" class="chip">Fan</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Сатаносексуалка</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">UnknownTheHero</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Нудьга</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">YarosTop1GG</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Павло</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Hlamingo</span>
           
         </div>
       </div>
@@ -370,7 +374,7 @@ document.addEventListener('DOMContentLoaded', () => {
     // --- Data ---
     const PROJECTS = [
 
-      { id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', progress:0, goal:10000, raised:617,
+      { id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', progress:0, goal:10000, raised:1617,
         desc_uk:'<strong>Легендарні бійці та стенди в арені мрії.</strong> Відкриваємо збір на повну українську локалізацію: інтерфейс, субтитри, туторіали.',
         desc_en:'<strong>Legendary fighters and Stands in a dream arena.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
