--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@ document.addEventListener('DOMContentLoaded', () => {
 		  <span aria-disabled="true" tabindex="-1" class="chip">Jean Kartösciante</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">JoJo</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Окунь</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Мухобієчка</span>
           
         </div>
       </div>
@@ -378,7 +379,7 @@ document.addEventListener('DOMContentLoaded', () => {
     // --- Data ---
     const PROJECTS = [
 
-      { id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', progress:30, goal:10000, raised:2332,
+      { id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', progress:30, goal:10000, raised:2402,
         desc_uk:'<strong>Легендарні бійці та стенди в арені мрії.</strong> Відкриваємо збір на повну українську локалізацію: інтерфейс, субтитри, туторіали.',
         desc_en:'<strong>Legendary fighters and Stands in a dream arena.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
