--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@ document.addEventListener('DOMContentLoaded', () => {
         desc_uk:'<strong>Культовий ремейк на оновленому рушії.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>A cult remake on the upgraded engine.</strong> Full Ukrainian translation: substories, tutorials, UI, and more.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'y3', title:'Yakuza 3 Remastered', cover:'assets/yakuza_3_remastered.webp', logo:'assets/yakuza3_logo.webp', status:'in-progress', progress:10,
-        desc_uk:'<strong>Той самий пляжний епізод.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
+      { id:'y3', title:'Yakuza 3 Remastered & Yakuza Kiwami 3 & Dark Ties', cover:'assets/yakuza_3_remastered.webp', logo:'assets/yakuza3_logo.webp', status:'in-progress', progress:10,
+        desc_uk:'<strong>Той самий пляжний епізод.</strong> Повний український переклад оригінальної гри та ремейку: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>The iconic beach episode returns.</strong> Full Ukrainian translation: substories, tutorials, UI, and more.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
       { id:'nmh1', title:'No More Heroes', cover:'assets/no_more_heroes_travis.webp', logo:'assets/no_more_heroes_logo.webp', status:'in-progress', progress:86,
