--- a/index.html
+++ b/index.html
@@ -369,6 +369,8 @@ document.addEventListener('DOMContentLoaded', () => {
 		  <span aria-disabled="true" tabindex="-1" class="chip">JoJo</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Окунь</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Мухобієчка</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">beesexyial</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Володимир</span>
           
         </div>
       </div>
